AttributesPanel validator fix - change field counter.
ResourceBrowserButton fix for "value" bindable

git-svn-id: http://svn.vdombox.ru/flextools/trunk@2591 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowserButton.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowserButton.mxml
@@ -22,7 +22,7 @@
 				_title = attrValue;
 			} 
 			
-			[Bindable]
+			[Bindable (event="valueCommit")]
 			public function get value():String {
 				return _value;
 			}
@@ -38,6 +38,7 @@
 					_value = "";
 					clearBtnEnabled = false;
 				}
+				dispatchEvent(new Event("valueCommit"));
 			}
 	
 			private function openWindow():void {
