--- a/IDE/Vdom/vdom/containers/ApplicationInformation.mxml
+++ b/IDE/Vdom/vdom/containers/ApplicationInformation.mxml
@@ -6,6 +6,10 @@
 	
 	layout="absolute" >
 	
+	<mx:Metadata>
+		[ResourceBundle("ApplicationManagment")]
+	</mx:Metadata>
+	
 	<mx:Style>
 		.thumb {
 			backgroundImage: Embed(source="vdomTheme.swf", symbol="ThumbBackgroundSelected");
@@ -48,8 +52,10 @@
 		<mx:Image id="applicationIcon" source="{_source}"
 			width="50" height="50" horizontalCenter="0" verticalCenter="0"/>
 	</mx:Canvas>
-	<mx:Label width="55" y="12" x="68" text="Pages:" textAlign="left" color="#FFFFFF"/>
-	<mx:Label width="55" y="29" x="68" text="Objects:" textAlign="left" color="#FFFFFF"/>
+	<mx:Label width="55" y="12" x="68" 
+		text="{resourceManager.getString('ApplicationManagment','information_pages')}" textAlign="left" color="#FFFFFF"/>
+	<mx:Label width="55" y="29" x="68" 
+		text="{resourceManager.getString('ApplicationManagment','information_objects')}" textAlign="left" color="#FFFFFF"/>
 	<mx:Label width="41" id="applicationPage" y="12" height="15" x="127" color="#FFFFFF"/>
 	<mx:Label width="41" id="applicationObjects" y="29" height="15" x="127" color="#FFFFFF"/>
 </ActionPanel>
