Localization AttributesPAnel title fix for localization
git-svn-id: http://svn.vdombox.ru/flextools/trunk@2599 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/applicationProperties/ApplicationProperties.mxml
+++ b/IDE/Vdom/vdom/components/applicationProperties/ApplicationProperties.mxml
@@ -42,7 +42,7 @@
 		}
 	</mx:Style>
 	<mx:Panel 
-		title="APPLICATION PROPERTIES"
+		title="{resourceManager.getString('ApplicationManagment','properties_title')}"
 		color="#FFFFFF"
 		cornerRadius="0" styleName="zzz" titleStyleName="titleNamez"
 		borderAlpha="1"
