--- a/IDE/Vdom/vdom/components/edit/Edit.mxml
+++ b/IDE/Vdom/vdom/components/edit/Edit.mxml
@@ -26,12 +26,14 @@
 			focusEnabled="false"
 			width="100%" borderStyle="none">			
 			
-			<editContainers:WorkArea id="workArea" label="WYSIWYG" 
+			<editContainers:WorkArea id="workArea" 
+				label="{resourceManager.getString('Edit','workarea_label')}" 
 				focusEnabled="false"
 				horizontalScrollPolicy="off" verticalScrollPolicy="off"
 				visible="false" />
 				
-			<editContainers:XMLPresentationEditor id="xmlEditor" label="VDOM XML"
+			<editContainers:XMLPresentationEditor id="xmlEditor" 
+				label="{resourceManager.getString('Edit','xmleditor_label')}"
 				focusEnabled="false"
 				dropShadowEnabled="true" borderStyle="solid"/>
 			
@@ -43,17 +45,19 @@
 		verticalScrollPolicy="auto" horizontalScrollPolicy="off"  >
 		
 		<editContainers:AttributesPanel id="attributesPanel"
-			title="OBJECT PROPERTIES"
-			acceptLabel="{resourceManager.getString('Application','editor_save')}" 
-			deleteLabel="{resourceManager.getString('Application','editor_delete')}"
+			title="{resourceManager.getString('Edit','attributes_title')}"
+			acceptLabel="{resourceManager.getString('Edit','attributes_save')}" 
+			deleteLabel="{resourceManager.getString('Edit','attributes_delete')}"
 			width="100%" headerHeight="30"/>
 		
-		<containers:ClosablePanel id="helpPanel" title="Help" 
+		<containers:ClosablePanel id="helpPanel" 
+			title="{resourceManager.getString('Edit','help_title')}" 
 			width="100%" >
 			
 			<mx:Text htmlText="{attributesPanel.help}" condenseWhite="true" width="100%" minHeight="0"/>
 		</containers:ClosablePanel>
 		
-		<editContainers:ObjectsPanel id="pageList" title="Pages" y="50" width="100%" /> 							
+		<editContainers:ObjectsPanel id="pageList" 
+			title="{resourceManager.getString('Edit','pages_title')}" y="50" width="100%" /> 							
 	</mx:VBox>
 </mx:HDividedBox>
