Localization Components fix for localization
git-svn-id: http://svn.vdombox.ru/flextools/trunk@2600 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/applicationEditor/ApplicationEditor.mxml
+++ b/IDE/Vdom/vdom/controls/applicationEditor/ApplicationEditor.mxml
@@ -78,13 +78,13 @@
 	<mx:HBox width="100%" horizontalAlign="center">
 	
 		<mx:Button id="submitButton" 
-			label="{resourceManager.getString('ApplicationManagment','submit_label')}"
+			label="{resourceManager.getString('ApplicationManagment','submit_label').toUpperCase()}"
 			styleName="buttonStyle"
 			cornerRadius="0" 
 			click="processValues();" />
 			
 		<mx:Button 
-			label="{resourceManager.getString('ApplicationManagment','cancel_label')}"
+			label="{resourceManager.getString('ApplicationManagment','cancel_label').toUpperCase()}"
 			styleName="buttonStyle"
 			cornerRadius="0" 
 			click="cancelValues();"/>
