--- a/IDE/Vdom/vdom/components/createApplication/CreateApplication.mxml
+++ b/IDE/Vdom/vdom/components/createApplication/CreateApplication.mxml
@@ -23,7 +23,7 @@
 		}
 	</mx:Style>
 	<mx:Panel 
-		title="{resourceManager.getString('ApplicationManagment','create_title')}"
+		title="{resourceManager.getString('ApplicationManagment','create_title').toUpperCase()}"
 		
 		cornerRadius="0" styleName="zzz" titleStyleName="titleNamez"
 		borderAlpha="1"
