git-svn-id: http://svn.vdombox.ru/flextools/trunk@2610 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/Vdom.mxml
+++ b/IDE/Vdom/Vdom.mxml
@@ -12,6 +12,7 @@
 	xmlns:modules="vdom.modules.*"
 		
 	preinitialize="preinitalizeHandler();"
+	creationComplete="creationCompleteHandler()"
 	
 	layout="absolute"
 	verticalScrollPolicy="off"
