--- a/DB/StructureEditor/v.01/dbStructureEditor.mxml
+++ b/DB/StructureEditor/v.01/dbStructureEditor.mxml
@@ -7,6 +7,9 @@
 	verticalGap="2" horizontalGap="0"
 	creationComplete="{trace('DB Structure Editor Debugger connected!');}"
 	backgroundAlpha="1" backgroundColor="#FFFFFF">
+	
+	<mx:RegExpValidator required="true" source="{__name}" property="text" expression="^[a-zA-Z]+[_a-zA-Z]*$"
+		valid="{validName = true;}" invalid="{validName = false;}" />
 
 	<!-- Main Class Scripting File -->	
 	<mx:Script source="dbStructureEditor_s.as" />
@@ -23,7 +26,8 @@
 			<mx:VBox borderStyle="solid" width="100%" height="100%" paddingTop="2" paddingRight="2">
 				<mx:HBox width="100%" verticalAlign="middle">
 					<mx:Label text="Name:" width="100" />
-					<mx:TextInput id="__name" width="100%" borderStyle="solid" change="{__applyBtn.enabled = true; addRemoveButtonsEnable(false);}" enabled="false" />
+					<mx:TextInput id="__name" width="100%" borderStyle="solid"
+						change="{__applyBtn.enabled = true; addRemoveButtonsEnable(false);}" enabled="false" />
 				</mx:HBox>
 				<mx:HBox width="100%" verticalAlign="middle">
 					<mx:Label text="ID:" width="100" />
