git-svn-id: http://svn.vdombox.ru/flextools/trunk@2641 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -230,6 +230,8 @@
 //		trace('App');
 		Application.application.removeEventListener(MouseEvent.MOUSE_MOVE, mouseMoveHandler);
 		Application.application.removeEventListener(MouseEvent.MOUSE_UP, 	mouseUpHandler);
+		
+		saveToServer();
 	}
 	
 	//---------------------
@@ -330,6 +332,12 @@
 		drLine(new MouseEvent(MouseEvent.MOUSE_OVER));
 		vctTest.graphics.clear();
 	}
+	
+	private function saveToServerHandler(trEvt:TreeEditorEvent):void
+	{
+		saveToServer();
+	}
+	
 	
 	/**
 	* ресурсы
@@ -544,7 +552,7 @@
 		
 		setStartPage();
 //		drawIndex();
-		saveToServer();
+//		saveToServer();
 		//showHnadler();
 	}
 	
