--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -263,7 +263,7 @@
 			else
 				massTreeElements[curID].x = main.mouseX - dX;
 		
-//		trace('y: '+ massTreeElements[curID].y)
+//		trace('y: '+ massTreeElements[c	urID].y)
 		if ((main.mouseY -dY ) < 10)
 			 	massTreeElements[curID].y = 10;
 			else
@@ -600,7 +600,7 @@
 </mx:Canvas>
 
 <mx:VBox>
-	<colorMenu02:ColorMenu2 id="colmen2"  />
+	<colorMenu02:ColorMenu2 id="colmen2" text="{resourceManager.getString('Tree','levels')}" />
 	<mx:CheckBox id="chExpandAll" label= "{resourceManager.getString('Tree','expand_all')}"  click="expandAll()"/>
 	<mx:CheckBox id="chShowSignature" label= "{resourceManager.getString('Tree','show_signature')}"
 		  click="showSignature()"/>
