--- a/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
+++ b/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
@@ -101,6 +101,7 @@
 	 			trContainer.hideHandler();
 	 			trContainer.removeEventListener(EventEditorEvent.DATA_CHANGED, dataChangedListener);
 //	 			trace('EvenEditor HIDE');
+				can.removeAllChildren();
 	 		}
 	 		
 	 		private var getApplEventID:String;
@@ -120,10 +121,6 @@
 	 				dataManager.getApplicationEvents(getApplEventID);
 	 			}
 	 			dataChanged = false;
-	 			
-	 			
-	 			//trace('get: '+ eeEvt.objID);
-	 			
 	 			
 	 			can.removeAllChildren();
 	 			trEvents.dataProvider  = eeEvt.data;
@@ -368,6 +365,8 @@
 			
 			private function createLine(evtID:String, actID:String):void
 			{
+				if(!actionsArray[actID]) return;
+				
 				if(!linesArray[evtID]) linesArray[evtID] = new Array();
 				
 				linesArray[evtID][actID] = 
@@ -616,21 +615,15 @@
 					
 					var type:XML = dataManager.getTypeByObjectId(actID.@ObjTgtID)
 					//var tupeID:String = type.Information.ID;
-					
-					var parametrs:* = type.E2vdom.Actions.Container.(@ID == curContainerTypeID)[0];
-					parametrs = parametrs.Action.(@MethodName == data.@MethodName).Parameters[0]; 
-			
-				//	if(tupeID == curContainerTypeID)
-//					{  
-//					de79cc9c-a40b-4325-8025-951f33a74191 / 
-//					4e3f096d-f18d-44ae-9d5b-7a13ff40963d
-						
+					var nData:* = type.E2vdom.Actions.Container.(@ID == curContainerTypeID).Action.(@MethodName == actID.@MethodName).Parameters[0];
+					if(nData) 
+					{
 						var objAct:EventEditorAction = new EventEditorAction(actID, curContainerTypeID);
 						
 						 actionsArray[objAct.ID] = setListeners4Action(objAct);
 						
 						can.addChild(actionsArray [actID.@ID]);
-//					}
+					}
 				}
 				
 				eventsArray = [];		
