--- a/TypeEditor/v.01/src/VdomObjectTypeEditor.mxml
+++ b/TypeEditor/v.01/src/VdomObjectTypeEditor.mxml
@@ -76,7 +76,7 @@
 			itemClick="{mainMenuHandler(event);}" />
 
 		<mx:Label text="Choose object language to edit:" fontWeight="bold" />
-		<mx:ComboBox id="__langSelection" width="150" cornerRadius="1" dataProvider="{langsDataProvider}" />	
+		<mx:ComboBox id="__langSelection" width="150" cornerRadius="1" dataProvider="{langsDataProvider}" change="{loadAttrProps();}" />	
 	</mx:HBox>
 	
 	<mx:TabNavigator width="100%" height="100%" >
@@ -252,7 +252,7 @@
 					paddingLeft="10" paddingRight="0" verticalGap="5">
 					
 					<mx:Label text="Attributes list" />
-					<mx:List id="__attrsList" width="100%" height="100%" click="{showAttrProps();}" />
+					<mx:List id="__attrsList" width="100%" height="100%" click="{changeAttrSelection();}" />
 					<mx:HBox width="100%" horizontalGap="5">
 						<mx:Spacer width="100%" />
 						<mx:Button label="Add" cornerRadius="1" icon="@Embed('/icons/list-add.png')"
